Fixed letter-spacing, improved responsive design and shuffled some content

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ body {
 	margin: 0;
 	padding: 0;
 
-	line-height: 1.4;
-
 	background-color: #333;
 	color: #212121;
 
@@ -21,6 +19,7 @@ body {
 }
 
 /* Links and headers */
+
 a {
 	color: #03A9F4;
 	text-decoration: none;
@@ -34,22 +33,19 @@ a:hover {
 
 h1 {
 	font-size: 3.5em;
+	letter-spacing: 0.0125em;
 	line-height: 1.3;
 	margin: 0;
 }
 
 h2 {
+	display: inline-block;
 	font-size: 1.8em;
-	padding: 0 0 1vh 0;
-	margin: 0;
-}
-
-h3 {
-	font-size: 1.4em;
+	letter-spacing: 0.0125em;
 	margin-top: 0;
 }
 
-/* Wrapper */
+/* Wrappers */
 
 .wrapper {
 	max-width: 50vw;
@@ -62,13 +58,17 @@ h3 {
 	flex-direction: column;
 }
 
+.contentWrapper {
+	flex: 1;
+	text-align: left;
+}
+
 /* Header */
 
 .header {
+	position: relative;
 	background-color: #f1f1f1;
-
-	border-bottom-right-radius: 2px;
-	border-bottom-left-radius: 2px;
+	border-radius: 0 0 2px 2px;
 }
 
 .header p {
@@ -78,6 +78,8 @@ h3 {
 
 .social {
 	position: absolute;
+	top: 0;
+	left: 0;
 	padding: 1vh;
 }
 
@@ -111,35 +113,19 @@ h3 {
 
 .highlight:hover {
 	background-color: #03A9F4;
-	border-top-right-radius: 2px;
-	border-top-left-radius: 2px;
+	border-radius: 2px 2px 0 0;
 	color: white;
 }
 
-.active {
+#About li:nth-child(3) a,
+#Notes li:nth-child(2) a,
+#Projects li:nth-child(1) a {
 	background-color: #03A9F4;
-	border-top-right-radius: 2px;
-	border-top-left-radius: 2px;
+	border-radius: 2px 2px 0 0;
 	color: white;
-}
-
-.icon {
-	height: 32px;
-	filter: opacity(0.7);
-	transition: all 0.25s ease;
-}
-
-.icon:hover {
-	filter: opacity(1);
 }
 
 /* Content */
-
-.contentWrapper {
-	height: 100%;
-	float: left;
-	text-align: justify;
-}
 
 .content {
 	background-color: #f1f1f1;
@@ -158,6 +144,7 @@ h3 {
 	font-size: 1.2em;
 	padding: 1vh 0;
 	margin: 0;
+	text-align: justify;
 }
 
 /* Blog */
@@ -175,6 +162,7 @@ h3 {
 }
 
 .date {
+	display: inline-block;
 	font-size: 0.7em;
 	color: #555;
 }
@@ -191,8 +179,9 @@ h3 {
 	justify-content: space-around;
 }
 
-.subtitle p {
-	padding: 0 0 2vh 0;
+.content .subtitle {
+	margin-top: -2em;
+	padding-bottom: 2em;
 }
 
 .entry {
@@ -204,6 +193,7 @@ h3 {
 
 .entry p {
 	padding: 0 0 3vh 0;
+	text-align: center;
 }
 
 .entry img {
@@ -217,53 +207,67 @@ h3 {
 
 /* Footer */
 
-footer {
-	padding: 1vh;
-}
-
-footer span {
+footer p {
 	color: #f1f1f1;
+	margin: 0.5em;
 	opacity: 0.5;
 	transition: all 0.25s ease;
 }
 
-footer span:hover {
+footer p:hover {
 	opacity: 1;
 }
 
-footer span img {
-	width: 12px;
+/* Icons */
+
+.iconLarge {
+	height: 32px;
+	opacity: 0.7;
+	transition: all 0.25s ease;
 }
 
-/* Media tags */
+.iconSmall {
+	width: 12px;
+	transition: all 0.25s ease;
+}
 
-@media screen and (max-width: 1040px) {
+.iconSmall:hover, .iconLarge:hover {
+	opacity: 1;
+}
+
+/* Responsive design */
+
+@media screen and (max-width: 1100px) {
 	.social {
 		display: none;
 	}
 }
 
-@media screen and (max-width: 1200px) {
+/* Small screen */
+
+@media screen and (max-width: 1300px) {
 	.wrapper {
 		max-width: 70vw;
 	}
 }
+
+/* Tablet */
 
 @media screen and (max-width: 800px) {
 	.wrapper {
 		max-width: 90vw;
 	}
 }
-@media screen and (max-width: 600px) {
+
+/* Mobile */
+
+@media screen and (max-width: 450px) {
 	.wrapper {
 		max-width: 100vw;
 	}
 
-	.header h1 {
-		font-size: 2.6em;
-	}
-
-	.navigation a{
-		font-size: 1.4em;
+	html,
+	body {
+		font-size: 12px;
 	}
 }
